# Practice_

./: 11.c  25345111_wangziyuan_1.c.cpp  CMakeLists.txt  Formal_actual_parameter.cpp  Lookingfor_consecutive_prime_numbers.cpp  Palindrome detection.c  README.md  hanoi.c  pointer.c  reverse_pointer.cpp  runoob_p.c  sum.cpp  zjx.cpp  寻找连续素数.cpp  形参与实参.cpp
Cpointer/: charpointer.c  test.c
classic problem/: 11.c  _rational_number_average.c  _rational_numbers_addition.c  hanoi.c  number_transform.cpp
string/: Figure1stletterapeart3times.cpp  charstring_justice.c  fgets_.c  sum.cpp
struct/: STRUCT.c  find_beststudent.c  sruct_ex1.cpp
