cmake_minimum_required(VERSION 4.0)
project(Practice1 C)

set(CMAKE_C_STANDARD 11)

add_executable(Practice1 STATIC library.c
        p1.cpp
        hanoi.c
        hanoi.c
        hanoi.c
        hanoi.c
        11.c
        11.c
        25345111_wangziyuan_1.c.cpp
        sum.cpp
        sum.cpp
        sum.cpp
        sum.cpp
        寻找连续素数.cpp
        寻找连续素数.cpp
        zjx.cpp
        zjx.cpp
        形参与实参.cpp)
